# C-datastructures

./: CMakeLists.txt  README.md
example/: heap.c
include/: datastructures.h  heap.h
src/: heap.c
